--- a/.settings/de.innot.avreclipse.core.prefs
+++ b/.settings/de.innot.avreclipse.core.prefs
@@ -19,7 +19,7 @@ avrtarget/avrdude/ProgrammerID=programmerconfig.4
 avrtarget/avrdude/UseCounter=false
 avrtarget/avrdude/WriteEEPROM=false
 avrtarget/avrdude/WriteFlash=true
-avrtarget/de.innot.avreclipse.configuration.app.release.1277106742.1646306142/ClockFrequency=1000000
+avrtarget/de.innot.avreclipse.configuration.app.release.1277106742.1646306142/ClockFrequency=16000000
 avrtarget/de.innot.avreclipse.configuration.app.release.1277106742.1646306142/ExtRAMSize=0
 avrtarget/de.innot.avreclipse.configuration.app.release.1277106742.1646306142/ExtendedRAM=false
 avrtarget/de.innot.avreclipse.configuration.app.release.1277106742.1646306142/MCUType=atmega2560
@@ -40,6 +40,27 @@ avrtarget/de.innot.avreclipse.configuration.app.release.1277106742.1646306142/av
 avrtarget/de.innot.avreclipse.configuration.app.release.1277106742.1646306142/avrdude/UseCounter=false
 avrtarget/de.innot.avreclipse.configuration.app.release.1277106742.1646306142/avrdude/WriteEEPROM=false
 avrtarget/de.innot.avreclipse.configuration.app.release.1277106742.1646306142/avrdude/WriteFlash=true
+avrtarget/de.innot.avreclipse.configuration.app.release.1277106742.407009932.1424545145/ClockFrequency=16000000
+avrtarget/de.innot.avreclipse.configuration.app.release.1277106742.407009932.1424545145/ExtRAMSize=0
+avrtarget/de.innot.avreclipse.configuration.app.release.1277106742.407009932.1424545145/ExtendedRAM=false
+avrtarget/de.innot.avreclipse.configuration.app.release.1277106742.407009932.1424545145/MCUType=atmega32u4
+avrtarget/de.innot.avreclipse.configuration.app.release.1277106742.407009932.1424545145/UseEEPROM=false
+avrtarget/de.innot.avreclipse.configuration.app.release.1277106742.407009932.1424545145/UseExtendedRAMforHeap=true
+avrtarget/de.innot.avreclipse.configuration.app.release.1277106742.407009932.1424545145/avrdude/BitBangDelay=
+avrtarget/de.innot.avreclipse.configuration.app.release.1277106742.407009932.1424545145/avrdude/Bitclock=
+avrtarget/de.innot.avreclipse.configuration.app.release.1277106742.407009932.1424545145/avrdude/EEPROMFile=
+avrtarget/de.innot.avreclipse.configuration.app.release.1277106742.407009932.1424545145/avrdude/EEPROMFromConfig=true
+avrtarget/de.innot.avreclipse.configuration.app.release.1277106742.407009932.1424545145/avrdude/FlashFile=
+avrtarget/de.innot.avreclipse.configuration.app.release.1277106742.407009932.1424545145/avrdude/FlashFromConfig=true
+avrtarget/de.innot.avreclipse.configuration.app.release.1277106742.407009932.1424545145/avrdude/NoChipErase=false
+avrtarget/de.innot.avreclipse.configuration.app.release.1277106742.407009932.1424545145/avrdude/NoSigCheck=false
+avrtarget/de.innot.avreclipse.configuration.app.release.1277106742.407009932.1424545145/avrdude/NoVerify=false
+avrtarget/de.innot.avreclipse.configuration.app.release.1277106742.407009932.1424545145/avrdude/NoWrite=false
+avrtarget/de.innot.avreclipse.configuration.app.release.1277106742.407009932.1424545145/avrdude/OtherOptions=
+avrtarget/de.innot.avreclipse.configuration.app.release.1277106742.407009932.1424545145/avrdude/ProgrammerID=programmerconfig.3
+avrtarget/de.innot.avreclipse.configuration.app.release.1277106742.407009932.1424545145/avrdude/UseCounter=false
+avrtarget/de.innot.avreclipse.configuration.app.release.1277106742.407009932.1424545145/avrdude/WriteEEPROM=false
+avrtarget/de.innot.avreclipse.configuration.app.release.1277106742.407009932.1424545145/avrdude/WriteFlash=true
 avrtarget/de.innot.avreclipse.configuration.app.release.1277106742.407009932/ClockFrequency=16000000
 avrtarget/de.innot.avreclipse.configuration.app.release.1277106742.407009932/ExtRAMSize=0
 avrtarget/de.innot.avreclipse.configuration.app.release.1277106742.407009932/ExtendedRAM=false
@@ -61,7 +82,7 @@ avrtarget/de.innot.avreclipse.configuration.app.release.1277106742.407009932/avr
 avrtarget/de.innot.avreclipse.configuration.app.release.1277106742.407009932/avrdude/UseCounter=false
 avrtarget/de.innot.avreclipse.configuration.app.release.1277106742.407009932/avrdude/WriteEEPROM=false
 avrtarget/de.innot.avreclipse.configuration.app.release.1277106742.407009932/avrdude/WriteFlash=true
-avrtarget/de.innot.avreclipse.configuration.app.release.1277106742/ClockFrequency=1000000
+avrtarget/de.innot.avreclipse.configuration.app.release.1277106742/ClockFrequency=16000000
 avrtarget/de.innot.avreclipse.configuration.app.release.1277106742/ExtRAMSize=0
 avrtarget/de.innot.avreclipse.configuration.app.release.1277106742/ExtendedRAM=false
 avrtarget/de.innot.avreclipse.configuration.app.release.1277106742/MCUType=atmega328p
